# faiss

./: .gitignore  CMakeLists.txt  Clustering.cpp  INSTALL  IndexIVF.cpp  IndexIVF.h  IndexIVFFlat.cpp  InvertedLists.cpp  InvertedLists.h  Makefile  OnDiskInvertedLists.cpp  build.sh
conda/: conda_build_config.yaml
conda/faiss/: build-lib.sh
cyber/: filter.py  rerank.py
extra/: AttrIndex.cpp  AttrIndex.h  AttrScanner.h
faiss/: CMakeLists.txt
faiss/python/: swigfaiss.swig
faiss/s/: sq.cpp  sq.h
impl/: index_read.cpp  index_write.cpp
python/: swigfaiss.swig
tests/: CMakeLists.txt
tutorial/cpp/: 1-Flat.cpp  2-IVFFlat.cpp  3-IVFPQ.cpp  CMakeLists.txt  win_rand.h
utils/: hamming-inl.h
